--- a/word-to-speech-api/service.yaml
+++ b/word-to-speech-api/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: translate-api-service
+  name: word-to-speech-api-service
   labels:
-    app: translate-api
+    app: word-to-speech-api
 spec:
   selector:
-    app: translate-api
+    app: word-to-speech-api
   ports:
     - protocol: TCP
       port: 80
